# test-fast-api

./: .gitignore  pyproject.toml
src/: main.py
src/models/: application_configuration.py  metadata.py  request_change.py  role.py  technical_data.py
src/models/enums/: __init__.py
src/repository/: application_item.py  application_repository.py  update_item.py
