[tool.poetry]
name = "test-fast-api"
version = "0.1.0"
description = ""
authors = ["santcabo <87836700+santcabo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "test_fast_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
